# src/Routers/adminRouter.ts
@@ -3,6 +3,8 @@ import { addJob } from '../Controller/Admin/Job/addJob';
 import { getJob } from '../Controller/Admin/Job/GetJob';
 import { Editejob } from '../Controller/Admin/Job/Editejob';
 import { CreateQuizz } from '../Controller/Admin/Quizz/CreateQuizz';
+import { EditQuizz } from '../Controller/Admin/Quizz/EditQuizz';
+import { EditChoies } from '../Controller/Admin/Choies/EditChoies';
 
 const router = express.Router();
 
@@ -21,6 +23,9 @@ router.put("/job/editjob/:jobid",Editejob);
 
 // quizz router
 router.post("/quizz/create",CreateQuizz);
+router.put("/quizz/editquizz/:quizzID", EditQuizz);
 
+// choise router
+router.put("/choise/editchoise/:choiesID", EditChoies);
 
 export default router;
